fix for overflow hidden

--- a/src/components/layouts/homelayout.scss
+++ b/src/components/layouts/homelayout.scss
@@ -10,6 +10,7 @@
         position: absolute;
         bottom: 0;
         z-index: 0;
+        overflow: hidden;
         .universalBackgroundLine {
             position: absolute;
             top: 0;
